
  * Bugfix: in Jsoup.connect(), a DELETE method request did not support a request body.
    <https://github.com/jhy/jsoup/issues/1972>

  * Bugfix: when calling Element.cssSelector() on an extremely deeply nested element, a StackOverflowError could occur.
    Further, a StackOverflowError may occur when running the query.
    <https://github.com/jhy/jsoup/issues/2001>

  * Change: removed previously deprecated methods Document#normalise, Element#forEach(org.jsoup.helper.Consumer<>),
    Node#forEach(org.jsoup.helper.Consumer<>), and the org.jsoup.helper.Consumer interface; the latter being a
    previously required compatibility shim prior to Android's de-sugaring support.

  * Change: the previous compatibility shim org.jsoup.UncheckedIOException is deprecated in favor of the now supported
    java.io.UncheckedIOException. If you are catching the former, modify your code to catch the latter instead.
    <https://github.com/jhy/jsoup/pull/1989>

  * Change: blocked noscript tags from being added to Safelists, due to incompatibilities between parsers with and
    without script-mode enabled.

Release 1.16.1 [29-Apr-2023]
  * Improvement: in Jsoup.connect(url), natively support URLs with Unicode characters in the path or query string,
    without having to be escaped by the caller.
    <https://github.com/jhy/jsoup/issues/1914>

  * Improvement: Calling Node.remove() on a node with no parent is now a no-op, vs a validation error.
    <https://github.com/jhy/jsoup/issues/1898>

  * Bugfix: aligned the HTML Tree Builder processing steps for AfterBody and AfterAfterBody to the updated WHATWG
    standard, to not pop the stack to close <body> or <html> elements. This prevents an errant </html> closing preceding
    structure. Also added appropriate error message outputs in this case.
    <https://github.com/jhy/jsoup/issues/1851>

  * Bugfix: Corrected support for ruby elements (<ruby>, <rp>, <rt>, and <rtc>) to current spec.